# ai-marketing-agent-rag-langgraph

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: company.py  config.py  main.py
app/agent/: graph.py  (+9 more)
bot/: client.py  main.py
config/: README.md  company.example.json  company.local.json.example
docs/: api.md  api.ru.md  architecture.md  architecture.ru.md  company-configuration.md  company-configuration.ru.md  demo-scenarios.md  langgraph-flow.md  langgraph-flow.ru.md  limitations.md  limitations.ru.md  portfolio-case-study.md  portfolio-case-study.ru.md  production-deploy.md  rag.md  rag.ru.md  roadmap.md  roadmap.ru.md  web-demo.md  web-demo.ru.md
knowledge_base/: README.md  campaign_workflow.md  crm_policy.md  escalation_policy.md  faq.md  onboarding.md  pricing.md  services.md
scripts/: check_demo_assets.py  check_docs_links.py  ingest_knowledge.py  seed_demo_data.py  test_agent_flows.py  test_llm_planner_flow.py  test_production_flow.py  test_real_agent_flow.py  test_real_conversation.py
tests/: conftest.py  test_agent_routing.py  test_chat.py  test_cleanup_scenarios.py  test_company_config.py  test_conversation.py  test_conversation_planner_general.py  test_crm.py  test_demo_assets.py  test_dialogue_policy.py  test_docs_links.py  test_health.py  test_ingest.py  test_integration_llm.py  test_planner.py  test_tickets.py  test_validation.py  test_web_demo.py
(+40 files in other folders)
