[project]
name = "ai-marketing-agent-rag-langgraph"
version = "0.1.0"
description = "Conversational AI agent for a fictional marketing agency: LangGraph, RAG, Qdrant, FastAPI, Telegram bot and CRM actions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
