[project]
name = "ai-marketing-agent-rag-langgraph"
version = "0.1.0"
description = "Configurable AI Customer Assistant Platform: an LLM planner with backend action validation, RAG over a Qdrant vector store, FastAPI, a Telegram bot and CRM/ticket actions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: exercises a real OpenAI-compatible LLM; skipped unless RUN_LLM_INTEGRATION=1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
